--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery-ui": "^1.12.1",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
+    "smoothscroll-polyfill": "^0.4.4",
     "webp-loader": "^0.6.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
